# rag-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
chat/: __init__.py  base.py  gemini_chat.py  openai_chat.py
chunking/: simple_chunker.py
configs/: README.md  multimodal_rag.yaml  multimodal_rag_llm_rerank.yaml  multimodal_rag_online.yaml  text_rag.yaml
embeddings/: generate_embeddings.py
evaluation/: eval_simple_rag.py  eval_text_rag.py  llm_judge.py
parse/: deepseek_ocr_parser.py  hybrid_parser.py  pdf_parser.py  pymupdf_parser.py  tesseract_parser.py
pipeline/: __init__.py  baseline_pipeline.py  vector_pipeline.py
prompt/: baseline_prompt.py
rerank/: __init__.py  base.py  bge_reranker.py  llm_reranker.py
retriever/: copali_retriever.py  rrf_text_retriever.py
scripts/: analyze_results.py  analyze_retrieval.py  analyze_retrieval_recall.py  llm_judge.py  ocr_directory_tesseract.py  offline_ocr.py  organize_pdfs_into_subdirs.py  run_inference.py  test_mm_rag.py  test_mm_rag_online.py  test_tesseract_examples.py  test_text_rag.py
src/rag_pipeline/: __init__.py
src/rag_pipeline/chunking/: __init__.py
src/rag_pipeline/embeddings/: __init__.py
src/rag_pipeline/llm/: __init__.py  base.py  gemini.py  openai.py  retry.py
src/rag_pipeline/parsers/: __init__.py  pdf_parser.py  pymupdf_parser.py  tesseract_parser.py
src/rag_pipeline/pipelines/: __init__.py  base.py  multimodal_rag_llm_rerank_pipeline.py  multimodal_rag_online_pipeline.py  multimodal_rag_pipeline.py  text_rag_pipeline.py
src/rag_pipeline/prompts/: __init__.py  rag_prompt.py
(+7 files in other folders)
