[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "colpali-engine",
    "langchain>=1.0.8",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.8.1",
    "pymupdf>=1.26.6",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.2",
    "torch==2.8.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali" }
